--- a/auth/templates/category/edit.html
+++ b/auth/templates/category/edit.html
@@ -4,7 +4,7 @@
 
 {% block content %}
     <div class="content">
-        <form method="post" action={{ url_for('.category_edit', id=instance.id) }} class="pure-form pure-form-aligned">
+        <form method="post" action={{ url_for('.category_edit', code=instance.code) }} class="pure-form pure-form-aligned">
             {{ form.csrf_token }}
             {% include 'category/_form.html' %}
         </form>
