add order filter

--- a/auth/templates/order/index.html
+++ b/auth/templates/order/index.html
@@ -10,6 +10,28 @@
 
 {% block content %}
     <div class="content">
+        <form class="pure-form">
+            <fieldset>
+                <form method="get">
+                    {% if show_network %}
+                        {{ form.network() }}
+                    {% endif %}
+
+                    {% if show_gateway %}
+                        {{ form.gateway() }}
+                    {% endif %}
+
+                    {{ form.user() }}
+                    {{ form.status() }}
+                    {{ form.created_from(placeholder='Created From') }}
+                    {{ form.created_to(placeholder='Created To') }}
+
+                    <button type="submit" class="pure-button pure-button-primary">Filter</button>
+                    <a href="{{ url_for('.order_index') }}" class="pure-button">Clear</a>
+                </form>
+            </fieldset>
+        </form>
+
         {% if pagination.items %}
             <table id="orders" width="100%" cellspacing="0" class="pure-table pure-table-horizontal">
                 <thead>
