--- a/auth/templates/order/index.html
+++ b/auth/templates/order/index.html
@@ -10,7 +10,7 @@
 
 {% block content %}
     <div class="content">
-        <form class="pure-form">
+        <form class="form-filter pure-form">
             <fieldset>
                 <form method="get">
                     {% if show_network %}
