fixes, adjustments fleshed out

--- a/auth/templates/adjustment/_form.html
+++ b/auth/templates/adjustment/_form.html
@@ -3,8 +3,10 @@
 <fieldset>
     {{ group(form.network) }}
     {{ group(form.gateway) }}
-    {{ group(form.reason) }}
+    {{ group(form.direction) }}
     {{ group(form.amount) }}
+    {{ group(form.reason) }}
+    {{ group(form.reference_number) }}
 
     <div class="pure-controls">
         <button type="submit" class="pure-button pure-button-primary">Ok</button>
