--- a/auth/templates/adjustment/index.html
+++ b/auth/templates/adjustment/index.html
@@ -19,9 +19,11 @@
                             Network &amp; Gateway
                         </th>
                         {% endif %}
-                        <th>Reason</th>
+                        <th>User</th>
+                        <th>Direction</th>
                         <th>Amount</th>
-                        <th class="actions">Actions</th>
+                        <th>Reason</th>
+                        <th>Reference</th>
                     </tr>
                 </thead>
 
@@ -40,21 +42,11 @@
                                 {% endif %}
                             </td>
                             {% endif %}
-                            <td class="reason" data-label="Reason">{{ instance.reason }}</td>
+                            <td data-label="User"><a href="{{ url_for('.user_edit', id=instance.user_id) }}">{{ instance.user }}</a></td>
+                            <td class="direction" data-label="Direction">{{ instance.direction }}</td>
                             <td class="amount" data-label="Amount">{{ render_currency_amount(instance.network.currency, instance.amount) }}</td>
-
-                            <td class="actions actions-instance">
-                                <div class="pure-button-group" role="group" aria-label="Actions Available">
-                                    {% for action, defn in instance.available_actions.items() %}
-                                    <a href="{{ url_for('.adjustment_action', id=instance.id, action=action) }}" class="pure-button" title="{{ action }}">
-                                        {% if defn.icon %}
-                                        <span class="oi" data-glyph={{ defn.icon }} aria-hidden="true"></span>
-                                        {% endif %}
-                                        {{ action }}
-                                    </a>
-                                    {% endfor %}
-                                </div>
-                            </td>
+                            <td class="reason" data-label="Reason">{{ instance.reason }}</td>
+                            <td class="reference_number" data-label="Reference">{{ instance.reference_number }}</td>
                         </tr>
                     {% endfor %}
                 </tbody>
