form generation fixes

--- a/auth/templates/category/_form.html
+++ b/auth/templates/category/_form.html
@@ -16,6 +16,7 @@
     {{ group(form.title) }}
     {{ group(form.description) }}
     {{ group(form.properties) }}
+    {{ group(form.sequence) }}
 
     <div class="pure-controls">
         <button type="submit" class="pure-button pure-button-primary">Ok</button>
