--- a/auth/templates/network/_form.html
+++ b/auth/templates/network/_form.html
@@ -6,7 +6,7 @@
     {{ group(form.id) }}
     {{ group(form.title) }}
     {{ group(form.description) }}
-    {{ group(form.country) }}
+    {{ group(form.currency) }}
     {{ group(form.ga_tracking_id) }}
 
     <div class="pure-controls">
