--- a/auth/templates/order/index.html
+++ b/auth/templates/order/index.html
@@ -72,7 +72,7 @@
                         <td data-label="User">{{ instance.user | default('-') }}</td>
                         <td data-label="Status">{{ instance.status }}</td>
                         <td data-label="Total">{{ render_currency_amount(instance.network.currency, instance.total_amount) }}</td>
-                        <td data-label="Created At">{{ instance.created_at | datetimeformat('short') }}</td>
+                        <td data-label="Created At">{{ instance.created_at | datetimeformat }}</td>
 
                         <td class="actions actions-instance">
                             {% include 'shared/actions.html' %}
