--- a/auth/templates/adjustment/index.html
+++ b/auth/templates/adjustment/index.html
@@ -44,7 +44,7 @@
                             {% endif %}
                             <td data-label="User"><a href="{{ url_for('.user_edit', id=instance.user_id) }}">{{ instance.user }}</a></td>
                             <td class="direction" data-label="Direction">{{ instance.direction }}</td>
-                            <td class="amount" data-label="Amount">{{ render_currency_amount(instance.network.currency, instance.amount) }}</td>
+                            <td class="amount" data-label="Amount">{{ instance.network.currency.render_amount(instance.amount) }}</td>
                             <td class="reason" data-label="Reason">{{ instance.reason }}</td>
                             <td class="reference_number" data-label="Reference">{{ instance.reference_number }}</td>
                         </tr>
