--- a/auth/templates/product/index.html
+++ b/auth/templates/product/index.html
@@ -52,7 +52,7 @@
                             <td class="category" data-label="Category"><a href={{ url_for('.category_edit', code=instance.category.code) }}>{{ instance.category }}</a></td>
                             <td class="code" data-label="Code"><a href={{ url_for('.product_edit', id=instance.id) }}>{{ instance.code }}</a></td>
                             <td class="title" data-label="Title">{{ instance.title }}</td>
-                            <td class="price" data-label="Price">{{ render_currency_amount(instance.network.currency, instance.price) }}</td>
+                            <td class="price" data-label="Price">{{ instance.network.currency.render_amount(instance.price) }}</td>
                             <td class="unit" data-label="Unit">{{ instance.unit }}</td>
 
                             <td class="actions actions-instance">
