--- a/auth/blueprints/order/templates/order/edit.html
+++ b/auth/blueprints/order/templates/order/edit.html
@@ -10,7 +10,7 @@
 
 {% block content %}
     <div class="order-edit content">
-        <form method="post" action="{{ url_for('.order_edit', hash=instance.hash) }}" class="order-item pure-form pure-form-aligned">
+        <form method="post" action="{{ url_for('.edit', hash=instance.hash) }}" class="order-item pure-form pure-form-aligned">
             {% include 'order/_form.html' %}
         </form>
 
@@ -33,13 +33,13 @@
                 <tr class="order-item">
                     <td data-label="Product">{{ item.product.title }}</td>
                     <td data-label="Quantity" style="text-align: right">{{ item.quantity }}</td>
-                    <td data-label="Price" style="text-align: right">{{ render_currency_amount(instance.currency, item.price) }}</td>
+                    <td data-label="Price" style="text-align: right">{{ instance.currency.render_amount(item.price) }}</td>
                     <td data-label="Unit" style="text-align: right">{{ item.unit or '-' }}</td>
-                    <td data-label="Total" style="text-align: right">{{ render_currency_amount(instance.currency, item.total_amount) }}</td>
+                    <td data-label="Total" style="text-align: right">{{ instance.currency.render_amount(item.total_amount) }}</td>
                     <td class="actions actions-instance">
                         <div class="pure-button-group" role="group" aria-label="Actions Available">
                             {% for action, defn in item.available_actions.items() %}
-                            <a href="{{ url_for('.order_item_action', id=item.id, action=action) }}" class="pure-button" title="{{ action }}">
+                            <a href="{{ url_for('.item_action', id=item.id, action=action) }}" class="pure-button" title="{{ action }}">
                                 {% if defn.icon %}
                                 <span class="oi" data-glyph={{ defn.icon }} aria-hidden="true"></span>
                                 {% endif %}
@@ -58,7 +58,7 @@
                         <strong>VAT</strong>
                     </td>
                     <td style="text-align: right">
-                        {{ render_currency_amount(instance.currency, instance.vat_amount) }}
+                        {{ instance.currency.render_amount(instance.vat_amount) }}
                     </td>
                     <td>
                     </td>
@@ -69,7 +69,7 @@
                         <strong>Total</strong>
                     </td>
                     <td style="text-align: right">
-                        {{ render_currency_amount(instance.currency, instance.total_amount) }}
+                        {{ instance.currency.render_amount(instance.total_amount) }}
                     </td>
                     <td>
                     </td>
