--- a/auth/templates/cashup/show.html
+++ b/auth/templates/cashup/show.html
@@ -28,7 +28,7 @@
         <ul>
             {% for transaction in instance.transactions %}
             <li>
-                <a href="{{ url_for('.transaction_show', hash=transaction.hash) }}">{{ transaction }}</a> - {{ transaction.type[0].upper() + transaction.type[1:] }} {{ transaction.status }} for {{ render_currency_amount(transaction.currency, transaction.total_amount) }} via {{ transaction.processor }}.
+                <a href="{{ url_for('.transaction_show', hash=transaction.hash) }}">{{ transaction }}</a> - {{ transaction.type[0].upper() + transaction.type[1:] }} {{ transaction.status }} for {{ transaction.currency.render_amount(transaction.total_amount) }} via {{ transaction.processor }}.
             </li>
             {% endfor %}
         </ul>
@@ -42,7 +42,7 @@
         <ul>
             {% for adjustment in instance.adjustments %}
             <li>
-                <a href="{{ url_for('.adjustment_show', hash=adjustment.hash) }}">{{ adjustment }}</a> - {{ render_currency_amount(adjustment.currency, adjustment.amount) }} cash {{ adjustment.direction }} for {{ adjustment.reason }}.
+                <a href="{{ url_for('.adjustment_show', hash=adjustment.hash) }}">{{ adjustment }}</a> - {{ adjustment.currency.render_amount(adjustment.amount) }} cash {{ adjustment.direction }} for {{ adjustment.reason }}.
                 {% if adjustment.reference_number %} (Reference {{ adjustment.reference_number }}){% endif %}
             </li>
             {% endfor %}
