--- a/auth/blueprints/network/templates/network/edit.html
+++ b/auth/blueprints/network/templates/network/edit.html
@@ -4,7 +4,7 @@
 
 {% block content %}
     <div class="content">
-        <form method="post" action={{ url_for('.network_edit', id=instance.id) }} class="pure-form pure-form-aligned">
+        <form method="post" action={{ url_for('.edit', id=instance.id) }} class="pure-form pure-form-aligned">
             {{ form.csrf_token }}
             {% include 'network/_form.html' %}
         </form>
