--- a/auth/templates/gateway/index.html
+++ b/auth/templates/gateway/index.html
@@ -2,7 +2,7 @@
 
 {% set page_title = 'Gateways' %}
 {% set new_title = 'New Gateway' %}
-{% set new_url = url_for('.gateway_new') %}
+{% set new_url = url_for('.new') %}
 
 {% set show_network = current_user.has_role('super-admin') %}
 
@@ -29,13 +29,13 @@
                             {% if show_network %}
                                 <td data-label="Network">{{ instance.network | default('-') }}</td>
                             {% endif %}
-                            <td data-label="ID"><a href="{{ url_for('.gateway_edit', id=instance.id) }}">{{ instance.id }}</a></td>
+                            <td data-label="ID"><a href="{{ url_for('.edit', id=instance.id) }}">{{ instance.id }}</a></td>
                             <td data-label="Title">{{ instance.title | default('-') }}</td>
                             <td data-label="Created At">{{ instance.created_at | datetimeformat('short') }}</td>
 
                             <td class="actions actions-instance">
                                 <div class="pure-button-group" role="group" aria-label="Actions Available">
-                                    <a href="{{ url_for('.gateway_delete', id=instance.id) }}" class="pure-button">
+                                    <a href="{{ url_for('.delete', id=instance.id) }}" class="pure-button">
                                         <span class="oi" data-glyph="x" title="Delete" aria-hidden="true"></span>
                                         Delete
                                     </a>
