--- a/auth/blueprints/network/templates/network/current.html
+++ b/auth/blueprints/network/templates/network/current.html
@@ -4,7 +4,7 @@
 
 {% block content %}
     <div class="content">
-        <form method="post" action={{ url_for('.my_network') }} class="pure-form pure-form-aligned">
+        <form method="post" action={{ url_for('.mine') }} class="pure-form pure-form-aligned">
             {% include 'network/_form.html' %}
         </form>
     </div>
